# spaceminer

./: .gitignore  CMakeLists.txt  Phase_One_Plan.md  README.md
src/main/: InPipe.cpp  InPipe.h  OutPipe.cpp  OutPipe.h  Phase_One_Plan.md  SpaceMiner.cpp  SpaceMiner.h  main.cpp
src/spaceminer/: InPipe.cpp  InputPipe.h  OutPipe.cpp  SpaceMiner.cpp  SpaceMiner.h  World.cpp  World.h
src/test/: ClientToSpaceMinerPipe.t.cpp  EnginePipeAdapter.t.cpp  SpaceMiner.t.cpp  SpaceMinerObservableHeight.t.cpp  SpaceMinerObservableSpeed.t.cpp  SpaceMinerWithGravity.t.cpp  SpaceMinerWithGravityFiringEngine.t.cpp  SpaceMinerWithGravityFiringThruster.t.cpp  SpaceMinerWithGravityHitsGround.t.cpp  SpaceMinerWithHeightNoGravity.t.cpp
